Fixed the z-index issue on compare.html by adding a z-index 1 to the compare button and both text boxes, and a z-index 0 to the modals class. Fixed a syntax error on the toggleClass method on the close2 button in compare.js to properly toggleClass modal-increse-z-index. Working well now.

--- a/compare.css
+++ b/compare.css
@@ -68,6 +68,7 @@ body {
     border: none;
     font-size: 25px;
     text-align: center;
+    z-index: 1;
 }
 
 ::-webkit-input-placeholder {
@@ -87,6 +88,7 @@ body {
     color: black;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
+    z-index: 1;
 }
 
 .modals {
@@ -97,7 +99,7 @@ body {
     height: 70svh;
     width: 90svw;
     margin-top: -10em;
-    z-index: -10;
+    z-index: 0;
 }
 
 .modal-increase-z-index {
